--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,3 +72,41 @@ jobs:
           daemon_off: false
           dockerfile: ./Dockerfile
           context: ./
+   
+  Deploy_to_EKS:
+    runs-on: ubuntu-latest
+    needs: BUILD_AND_PUBLISH
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Update kubeconfig
+        run: |
+          aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER }} --region ${{ env.AWS_REGION }}
+      
+      - name: Print config file
+        run: |
+          cat ~/.kube/config
+
+      - name: Login to ECR
+        run: kubectl create secret docker-registry regcred --docker-server=${{secrets.REGISTRY}} --docker-username=AWS --docker-password=$(aws ecr get-login-password)
+
+      - name: Deploy Helm
+        uses: bitovi/github-actions-deploy-eks-helm@1.2.8
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+          cluster-name: ${{ env.EKS_CLUSTER }}
+          #Config files .github/values/dev.yml
+          chart-path: helm/vprofilecharts
+          namespace: default
+          values: appimage=${{secrets.REGISTRY}}/{{ env.ECR_REPOSITORY }},apptag=latest
+          name: vprofile-stack
